# SQLAlchemist

./: .env-example  Dockerfile  alembic.ini  dao.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  settings.py
api/: api_router_auth.py  api_router_user.py  general_routers.py  schemas_user.py
migrations/: env.py
migrations/versions/: 2024_01_15_1810-1bed2150b4ab_token.py  2024_02_05_1802-23bf35e32136_creditcard_navbar.py
templates/: add-product.html  base.html  index.html  login.html  registration.html
web/: web_router.py
