[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Evgeny Fuchenko <evgenijfucenko2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.25"
fastapi = {extras = ["all"], version = "^0.108.0"}
alembic = "^1.13.1"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
